--- a/_layouts/post+image.html
+++ b/_layouts/post+image.html
@@ -12,6 +12,8 @@ layout: default
       
       .post-image {
         border-radius: 1rem;
+        max-width: 100%;
+        height: auto;
       }
     </style>
     <div class="post-image-container">
