--- a/_layouts/post+image.html
+++ b/_layouts/post+image.html
@@ -7,17 +7,27 @@ layout: default
     {% if page.image %}
     <style>
       .post-image-container {
+        display: flex;
+        flex-direction: column;
         margin-bottom: 1rem;
       }
       
       .post-image {
+        object-fit: cover;
         border-radius: 1rem;
         max-width: 100%;
-        height: auto;
+        max-height: 480px;
+      }
+      
+      .post-image-caption {
+        text-align: right;
+        padding-block-start: 0.25rem;
+        padding-inline-end: 0.5rem;
       }
     </style>
     <div class="post-image-container">
-      <img class="post-image" src="{{ page.image }}?nf_resize=smartcrop&w=740&h=480" width="740px" height="480px" />
+      <img class="post-image" src="{{ page.image.contentUrl }}" height="480px" />
+      <p class="post-image-caption"> Image by {{ page.image.author }} </p>
     </div>
     {% endif %}
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
