--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -5,19 +5,24 @@ layout: default
 
   <header class="post-header">
     <style>
-      .about-image-container {
-        text-align: center;
-        margin-bottom: 4rem;
+      .header-container {
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
       }
       
       .about-image {
         border-radius: 50%;
+        object-fit: cover;
       }
     </style>
-    <div class="about-image-container">
-      <img class="about-image" src="/assets/profile.jpg" width="180" height="180"/>
+    <div class="header-container">
+      <img class="about-image" src="http://1.gravatar.com/avatar/2fc506c34c3dd44423eb89242e11aea7?s=360" width="180" height="180"/>
+      <div>
+        <h1 class="post-title">{{ page.title | escape }}</h1>
+        <p>{{ site.description }}</p>
+      </div>
     </div>
-	  <h1 class="post-title">{{ page.title | escape }}</h1>
   </header>
 
   <div class="post-content">
