✨ Separate subdomains for blog and cockpit

--- a/deployment/roles/caddy/templates/Caddyfile.j2
+++ b/deployment/roles/caddy/templates/Caddyfile.j2
@@ -1,3 +1,9 @@
-technocidal.com
+technocidal.com {
 
-reverse_proxy :8080
+	reverse_proxy :8080
+}
+
+cockpit.technocidal.com {
+
+	reverse_proxy :9090
+}
